# fullstack-agentic-engineering

./: .gitignore  AGENTS.md  README.md
.codex/skills/mintlify-docs/: SKILL.md
docs/: docs.json
docs/agentic-design-patterns/: index.mdx
docs/agentic-design-patterns/autogen/: index.mdx
docs/agentic-design-patterns/crewai/: index.mdx
docs/agentic-design-patterns/langgraph/: deep-research-agents.mdx  index.mdx  planner-executor-agents.mdx  query-decomposition-agents.mdx  react-agents.mdx  reflex-agents.mdx  reflexion-agents.mdx
src/agentic-design-patterns/langgraph/react-agents/: .pre-commit-config.yaml  Makefile  README.md  agent.py  app.py  client.py  prompt.md  pyproject.toml  tools.py
src/agentic-design-patterns/langgraph/reflection-agents/: .env.example  README.md  agent.py  tools.py
src/agentic-design-patterns/langgraph/reflex-agents/: .pre-commit-config.yaml  Makefile  README.md  agent.py  app.py  client.py  prompt.md
src/agentic-design-patterns/langgraph/reflexion-agents/: models.py  pyproject.toml
src/agentic-design-patterns/langgraph/relfex-agents/: .sesskey  Makefile  README.md  agent.py  app.py  client.py  main.py  pyproject.toml
src/agentic-design-patterns/langgraph/relfex-agents/assets/: routing.mmd
